src/globals.css
:root {
  --main-bg-color: #17234e;
  --nav-bar-color: #1f3480;
  --text-color: rgb(231, 231, 231);
  --graph-bg-color: rgb(255, 255, 255);
  --graph-stroke: rgb(2, 238, 255);
  --graph-fill-color: red;
}

#app {
  width: 100%;
  height: 100vh;
  background-color: var(--main-bg-color);
}

.content {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 0 20px;
  height: 100%;
  background-color: var(--main-bg-color);
}

.newsCard {
  color: var(--text-color);
  height: 50vh;
  overflow-y: scroll;
  background: #282828;
  border-radius: 5px;
  box-shadow: 0 4px 30px rgb(0, 0, 0);
  backdrop-filter: blur(5px);
  border: 1px solid rgb(255, 255, 255);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  max-width: 45%;
  width: fit-content;
  overflow-x: hidden;
}
::-webkit-scrollbar {
  width: 0;
}

.news-list {
  list-style: none;
  width: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0px;
  margin: 0px;
}

.news-item {
  border: 1px solid white;
  margin-bottom: 20px;
  border-radius: 5px;
  max-width: 80%;
  text-align: center;
  padding: 10px;
}

.news-link {
  color: var(--text-color);
}
.news-link:hover {
  color: rgb(114, 114, 114);
}

.navBar {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  background-color: var(--nav-bar-color);
  width: 100%;
  color: var(--text-color);
  height: 100px;
}

.dropdown {
  min-width: 300px;
}

.graph-container {
  color: var(--text-color);
  font-size: 1rem;
  width: fit-content;
  height: fit-content;
  padding: 30px;
  margin: 10px;
}

#footer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
  background-color: var(--nav-bar-color);
  width: 100%;
  bottom: 0;
  left: 0;
  text-align: center;
  height: 100px;
}

